# BCnews

./: .gitignore  Cargo.toml  README.md
frontend/: index.html  styles.css
src/: api.rs  index.html  main.rs  models.rs  script.js  style.css
static/: index.html  styles.css
