[package]
name = "crypto_news_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # Add this line
tokio = { version = "1", features = ["full"] }
redis = "0.23"
log = "0.4"  # Add this line
env_logger = "0.10"  # Add this line