[package]
name = "crypto_news_aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
dotenv = "0.15"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
actix-web = "4.0"
actix-files = "0.6"